# data-recon-framework

./: MANIFEST.md  README.md  cleanup.sh  pyproject.toml  recon_framework.code-workspace  run_tests.py  setup.py  test_reconciliation_results.json
config/: json_recon_config.yaml  recon_config_template.yaml  starburst_config.json
data/: source.json  target.json
src/recon_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/reconciliation/: __init__.py  comparators.py  config.py  connections.py  constants.py  framework.py  models.py
tests/: test_comparators.py  test_config.py  test_connections.py  test_framework.py  test_models.py  test_reconciliation.py  test_starburst_integration.py  test_validation_and_error_handling.py
tests/data/: test_source.json  test_target.json
